# account-closing

./: .copier-answers.yml  .coveragerc  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  __init__.py  __manifest__.py  __openerp__.py  oca_dependencies.txt  test-requirements.txt
account_cutoff_accrual_base/: README.rst  __init__.py  __manifest__.py  __openerp__.py  account.py  account_cutoff.py  account_cutoff_view.xml  account_view.xml  company.py  company_view.xml
account_cutoff_accrual_dates/: README.rst  __manifest__.py
account_cutoff_accrual_order_base/: README.rst  __manifest__.py
account_cutoff_accrual_order_product_category/: __manifest__.py
account_cutoff_accrual_order_stock_base/: README.rst  __manifest__.py
account_cutoff_accrual_picking/: README.rst  __init__.py  __manifest__.py  __openerp__.py  account_cutoff.py  account_cutoff_view.xml
account_cutoff_accrual_picking_product_analytic/: README.rst  __manifest__.py
account_cutoff_accrual_purchase/: README.rst  __init__.py  __manifest__.py  hooks.py
account_cutoff_accrual_purchase_stock/: README.rst  __init__.py  __manifest__.py
account_cutoff_accrual_return/: README.rst  __manifest__.py
account_cutoff_accrual_sale/: README.rst  __init__.py  __manifest__.py  hooks.py
account_cutoff_accrual_sale_product_category/: __manifest__.py
account_cutoff_accrual_sale_stock/: README.rst  __manifest__.py
account_cutoff_accrual_subscription/: README.rst  __manifest__.py
account_cutoff_base/: README.rst  __init__.py  company.py  (+5 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+1337 files in other folders)
