[project]
name = "odoo-addons-oca-account-closing"
version = "17.0.20231208.1"
dependencies = [
    "odoo-addon-account_cutoff_base>=17.0dev,<17.1dev",
    "odoo-addon-account_invoice_start_end_dates>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
